vendor/moenotes-chart-parser/include/moenotes_chart_parser.h

#define MOENOTES_VERSION_MAJOR 0
#define MOENOTES_VERSION_MINOR 3
#define MOENOTES_VERSION_PATCH 0
#define MOENOTES_VERSION_STRING "0.3.0"
typedef struct moenotes_score moenotes_score_t;
typedef enum moenotes_result {
    MOENOTES_OK = 0,
    MOENOTES_ERR_INVALID_ARGUMENT = 1,
    MOENOTES_ERR_OUT_OF_MEMORY = 2,
    MOENOTES_ERR_GZIP = 3,
    MOENOTES_ERR_JSON = 4,
    MOENOTES_ERR_SCHEMA = 5,
    MOENOTES_ERR_RANGE = 6,
    MOENOTES_ERR_INTERNAL = 7,
    MOENOTES_ERR_UNSUPPORTED = 8
} moenotes_result_t;
typedef void *(*moenotes_malloc_fn)(void *ctx, size_t size);
typedef void *(*moenotes_realloc_fn)(void *ctx, void *ptr, size_t size);
typedef void (*moenotes_free_fn)(void *ctx, void *ptr);
typedef struct moenotes_allocator {
    void *ctx;
    moenotes_malloc_fn malloc_fn;
    moenotes_realloc_fn realloc_fn;
    moenotes_free_fn free_fn;
} moenotes_allocator_t;
typedef struct moenotes_parse_options {
    int32_t start_note_id;
    uint32_t slide_combo_unit; /* 0 disables, 8 enables relative eighth notes. */
    uint8_t mirror;
    uint8_t add_flick_hidden;
} moenotes_parse_options_t;
typedef struct moenotes_position {
    int32_t bar;
    int32_t rhythm;
    int32_t rhythmic_unit;
    double bar_progress;
    int32_t time_ms;
} moenotes_position_t;
typedef enum moenotes_operate_type {
    MOENOTES_OP_NONE = 0,
    MOENOTES_OP_NORMAL = 1,
    MOENOTES_OP_SLIDE_BEGIN = 20,
    MOENOTES_OP_SLIDE_CONNECTION = 21,
    MOENOTES_OP_SLIDE_END = 22,
    MOENOTES_OP_FLICK = 40,
    MOENOTES_OP_SLIDE_BEGIN_FLICK = 41,
    MOENOTES_OP_SLIDE_END_FLICK = 42,
    MOENOTES_OP_TRACE = 60,
    MOENOTES_OP_SLIDE_BEGIN_TRACE = 61,
    MOENOTES_OP_SLIDE_END_TRACE = 62,
    MOENOTES_OP_SLIDE_CONNECTION_TRACE = 63,
    MOENOTES_OP_HIDDEN_SLIDE_BEGIN = 80,
    MOENOTES_OP_HIDDEN_SLIDE_END = 82,
    MOENOTES_OP_GUIDE_BEGIN = 100,
    MOENOTES_OP_GUIDE_BEGIN_NORMAL = 101,
    MOENOTES_OP_GUIDE_BEGIN_FLICK = 102,
    MOENOTES_OP_GUIDE_END = 103,
    MOENOTES_OP_GUIDE_BEGIN_TRACE = 104,
    MOENOTES_OP_GUIDE_END_TRACE = 105,
    MOENOTES_OP_COMBO = 120,
    MOENOTES_OP_COMBO_SKIP = 121,
    MOENOTES_OP_HIDDEN = 122,
    MOENOTES_OP_INVALID_HIDDEN = 123
} moenotes_operate_type_t;
typedef enum moenotes_ease {
    MOENOTES_EASE_LINEAR = 0,
    MOENOTES_EASE_OUT = 1,
    MOENOTES_EASE_IN = 2
} moenotes_ease_t;
typedef enum moenotes_direction {
    MOENOTES_DIRECTION_NORMAL = 0,
    MOENOTES_DIRECTION_LEFT = 1,
    MOENOTES_DIRECTION_RIGHT = 2
} moenotes_direction_t;
typedef enum moenotes_alpha {
    MOENOTES_ALPHA_NONE = 0,
    MOENOTES_ALPHA_FADE_IN = 1,
    MOENOTES_ALPHA_FADE_OUT = 2
} moenotes_alpha_t;
typedef struct moenotes_note_view {
    int32_t id;
    moenotes_operate_type_t operate_type;
    int32_t tick;
    moenotes_position_t position;
    int32_t lane_count;
    int32_t lane_start;
    int32_t lane_end;
    double lane_start_float;
    double lane_end_float;
    double width;
    uint8_t critical;
    uint8_t visible;
    uint8_t slide_along;
    uint8_t pos_auto;
    int32_t pair_note_id;
    int32_t parent_note_id;
    int32_t hidden_for_note_id;
    int32_t line_id;
    int32_t source_index;
    moenotes_direction_t direction;
    moenotes_ease_t ease_left;
    moenotes_ease_t ease_right;
    moenotes_alpha_t alpha;
    int32_t line_index; /* Reusable line slot; -1 for standalone notes. */
    uint8_t generated;
} moenotes_note_view_t;