src/parser_ffi.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const MOENOTES_VERSION_MAJOR: u32 = 0;
pub const MOENOTES_VERSION_MINOR: u32 = 3;
pub const MOENOTES_VERSION_PATCH: u32 = 0;
pub const MOENOTES_VERSION_STRING: &[u8; 6] = b"0.3.0\0";
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct moenotes_score {
    _unused: [u8; 0],
}
pub type moenotes_score_t = moenotes_score;
pub const moenotes_result_MOENOTES_OK: moenotes_result = 0;
pub const moenotes_result_MOENOTES_ERR_INVALID_ARGUMENT: moenotes_result = 1;
pub const moenotes_result_MOENOTES_ERR_OUT_OF_MEMORY: moenotes_result = 2;
pub const moenotes_result_MOENOTES_ERR_GZIP: moenotes_result = 3;
pub const moenotes_result_MOENOTES_ERR_JSON: moenotes_result = 4;
pub const moenotes_result_MOENOTES_ERR_SCHEMA: moenotes_result = 5;
pub const moenotes_result_MOENOTES_ERR_RANGE: moenotes_result = 6;
pub const moenotes_result_MOENOTES_ERR_INTERNAL: moenotes_result = 7;
pub const moenotes_result_MOENOTES_ERR_UNSUPPORTED: moenotes_result = 8;
pub type moenotes_result = ::std::os::raw::c_uint;
pub use self::moenotes_result as moenotes_result_t;
pub type moenotes_malloc_fn = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut ::std::os::raw::c_void,
        size: usize,
    ) -> *mut ::std::os::raw::c_void,
>;
pub type moenotes_realloc_fn = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut ::std::os::raw::c_void,
        ptr: *mut ::std::os::raw::c_void,
        size: usize,
    ) -> *mut ::std::os::raw::c_void,
>;
pub type moenotes_free_fn = ::std::option::Option<
    unsafe extern "C" fn(ctx: *mut ::std::os::raw::c_void, ptr: *mut ::std::os::raw::c_void),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct moenotes_allocator {
    pub ctx: *mut ::std::os::raw::c_void,
    pub malloc_fn: moenotes_malloc_fn,
    pub realloc_fn: moenotes_realloc_fn,
    pub free_fn: moenotes_free_fn,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
#[cfg(target_pointer_width = "64")]
const _: () = {
    ["Size of moenotes_allocator"][::std::mem::size_of::<moenotes_allocator>() - 32usize];
    ["Alignment of moenotes_allocator"][::std::mem::align_of::<moenotes_allocator>() - 8usize];
    ["Offset of field: moenotes_allocator::ctx"]
        [::std::mem::offset_of!(moenotes_allocator, ctx) - 0usize];
    ["Offset of field: moenotes_allocator::malloc_fn"]
        [::std::mem::offset_of!(moenotes_allocator, malloc_fn) - 8usize];
    ["Offset of field: moenotes_allocator::realloc_fn"]
        [::std::mem::offset_of!(moenotes_allocator, realloc_fn) - 16usize];
    ["Offset of field: moenotes_allocator::free_fn"]
        [::std::mem::offset_of!(moenotes_allocator, free_fn) - 24usize];
};
#[cfg(target_os = "emscripten")]
const _: () = {
    assert!(::std::mem::size_of::<moenotes_allocator>() == 16);
    assert!(::std::mem::align_of::<moenotes_allocator>() == 4);
    assert!(::std::mem::offset_of!(moenotes_allocator, malloc_fn) == 4);
    assert!(::std::mem::offset_of!(moenotes_allocator, realloc_fn) == 8);
    assert!(::std::mem::offset_of!(moenotes_allocator, free_fn) == 12);
};
impl Default for moenotes_allocator {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type moenotes_allocator_t = moenotes_allocator;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct moenotes_parse_options {
    pub start_note_id: i32,
    pub slide_combo_unit: u32,
    pub mirror: u8,
    pub add_flick_hidden: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of moenotes_parse_options"][::std::mem::size_of::<moenotes_parse_options>() - 12usize];
    ["Alignment of moenotes_parse_options"]
        [::std::mem::align_of::<moenotes_parse_options>() - 4usize];
    ["Offset of field: moenotes_parse_options::start_note_id"]
        [::std::mem::offset_of!(moenotes_parse_options, start_note_id) - 0usize];
    ["Offset of field: moenotes_parse_options::slide_combo_unit"]
        [::std::mem::offset_of!(moenotes_parse_options, slide_combo_unit) - 4usize];
    ["Offset of field: moenotes_parse_options::mirror"]
        [::std::mem::offset_of!(moenotes_parse_options, mirror) - 8usize];
    ["Offset of field: moenotes_parse_options::add_flick_hidden"]
        [::std::mem::offset_of!(moenotes_parse_options, add_flick_hidden) - 9usize];
};
pub type moenotes_parse_options_t = moenotes_parse_options;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct moenotes_position {
    pub bar: i32,
    pub rhythm: i32,
    pub rhythmic_unit: i32,
    pub bar_progress: f64,
    pub time_ms: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of moenotes_position"][::std::mem::size_of::<moenotes_position>() - 32usize];
    ["Alignment of moenotes_position"][::std::mem::align_of::<moenotes_position>() - 8usize];
    ["Offset of field: moenotes_position::bar"]
        [::std::mem::offset_of!(moenotes_position, bar) - 0usize];
    ["Offset of field: moenotes_position::rhythm"]
        [::std::mem::offset_of!(moenotes_position, rhythm) - 4usize];
    ["Offset of field: moenotes_position::rhythmic_unit"]
        [::std::mem::offset_of!(moenotes_position, rhythmic_unit) - 8usize];
    ["Offset of field: moenotes_position::bar_progress"]
        [::std::mem::offset_of!(moenotes_position, bar_progress) - 16usize];
    ["Offset of field: moenotes_position::time_ms"]
        [::std::mem::offset_of!(moenotes_position, time_ms) - 24usize];
};
pub type moenotes_position_t = moenotes_position;
pub const moenotes_operate_type_MOENOTES_OP_NONE: moenotes_operate_type = 0;
pub const moenotes_operate_type_MOENOTES_OP_NORMAL: moenotes_operate_type = 1;
pub const moenotes_operate_type_MOENOTES_OP_SLIDE_BEGIN: moenotes_operate_type = 20;
pub const moenotes_operate_type_MOENOTES_OP_SLIDE_CONNECTION: moenotes_operate_type = 21;
pub const moenotes_operate_type_MOENOTES_OP_SLIDE_END: moenotes_operate_type = 22;
pub const moenotes_operate_type_MOENOTES_OP_FLICK: moenotes_operate_type = 40;
pub const moenotes_operate_type_MOENOTES_OP_SLIDE_BEGIN_FLICK: moenotes_operate_type = 41;
pub const moenotes_operate_type_MOENOTES_OP_SLIDE_END_FLICK: moenotes_operate_type = 42;
pub const moenotes_operate_type_MOENOTES_OP_TRACE: moenotes_operate_type = 60;
pub const moenotes_operate_type_MOENOTES_OP_SLIDE_BEGIN_TRACE: moenotes_operate_type = 61;
pub const moenotes_operate_type_MOENOTES_OP_SLIDE_END_TRACE: moenotes_operate_type = 62;
pub const moenotes_operate_type_MOENOTES_OP_SLIDE_CONNECTION_TRACE: moenotes_operate_type = 63;
pub const moenotes_operate_type_MOENOTES_OP_HIDDEN_SLIDE_BEGIN: moenotes_operate_type = 80;
pub const moenotes_operate_type_MOENOTES_OP_HIDDEN_SLIDE_END: moenotes_operate_type = 82;
pub const moenotes_operate_type_MOENOTES_OP_GUIDE_BEGIN: moenotes_operate_type = 100;
pub const moenotes_operate_type_MOENOTES_OP_GUIDE_BEGIN_NORMAL: moenotes_operate_type = 101;
pub const moenotes_operate_type_MOENOTES_OP_GUIDE_BEGIN_FLICK: moenotes_operate_type = 102;
pub const moenotes_operate_type_MOENOTES_OP_GUIDE_END: moenotes_operate_type = 103;
pub const moenotes_operate_type_MOENOTES_OP_GUIDE_BEGIN_TRACE: moenotes_operate_type = 104;
pub const moenotes_operate_type_MOENOTES_OP_GUIDE_END_TRACE: moenotes_operate_type = 105;
pub const moenotes_operate_type_MOENOTES_OP_COMBO: moenotes_operate_type = 120;
pub const moenotes_operate_type_MOENOTES_OP_COMBO_SKIP: moenotes_operate_type = 121;
pub const moenotes_operate_type_MOENOTES_OP_HIDDEN: moenotes_operate_type = 122;
pub const moenotes_operate_type_MOENOTES_OP_INVALID_HIDDEN: moenotes_operate_type = 123;
pub type moenotes_operate_type = ::std::os::raw::c_uint;
pub use self::moenotes_operate_type as moenotes_operate_type_t;
pub const moenotes_ease_MOENOTES_EASE_LINEAR: moenotes_ease = 0;
pub const moenotes_ease_MOENOTES_EASE_OUT: moenotes_ease = 1;
pub const moenotes_ease_MOENOTES_EASE_IN: moenotes_ease = 2;
pub type moenotes_ease = ::std::os::raw::c_uint;
pub use self::moenotes_ease as moenotes_ease_t;
pub const moenotes_direction_MOENOTES_DIRECTION_NORMAL: moenotes_direction = 0;
pub const moenotes_direction_MOENOTES_DIRECTION_LEFT: moenotes_direction = 1;
pub const moenotes_direction_MOENOTES_DIRECTION_RIGHT: moenotes_direction = 2;
pub type moenotes_direction = ::std::os::raw::c_uint;
pub use self::moenotes_direction as moenotes_direction_t;
pub const moenotes_alpha_MOENOTES_ALPHA_NONE: moenotes_alpha = 0;
pub const moenotes_alpha_MOENOTES_ALPHA_FADE_IN: moenotes_alpha = 1;
pub const moenotes_alpha_MOENOTES_ALPHA_FADE_OUT: moenotes_alpha = 2;
pub type moenotes_alpha = ::std::os::raw::c_uint;
pub use self::moenotes_alpha as moenotes_alpha_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct moenotes_note_view {
    pub id: i32,
    pub operate_type: moenotes_operate_type_t,
    pub tick: i32,
    pub position: moenotes_position_t,
    pub lane_count: i32,
    pub lane_start: i32,
    pub lane_end: i32,
    pub lane_start_float: f64,
    pub lane_end_float: f64,
    pub width: f64,
    pub critical: u8,
    pub visible: u8,
    pub slide_along: u8,
    pub pos_auto: u8,
    pub pair_note_id: i32,
    pub parent_note_id: i32,
    pub hidden_for_note_id: i32,
    pub line_id: i32,
    pub source_index: i32,
    pub direction: moenotes_direction_t,
    pub ease_left: moenotes_ease_t,
    pub ease_right: moenotes_ease_t,
    pub alpha: moenotes_alpha_t,
    pub line_index: i32,
    pub generated: u8,
}
